docs/book/samples/ch04/seq.out
error[endpoint]: unhandled err reached main: "division by zero"
  born in main at seq.kso:3
