docs/book/samples/ch04/seq.kso
print "sencha: {3 / 0} steeps left"
>> print "hojicha: {to_int "two"} steeps left"
